--- a/views/iletisim.ejs
+++ b/views/iletisim.ejs
@@ -7,6 +7,7 @@
                 <p>Telefon: <a href="tel:+90 (533) 735 7895">+90 (533) 735 7895</a></p>
                 <p>Mail: <a href="mailto:iletisim@djidestek.com">iletisim@djidestek.com</a></p>
                 <p>Adres: <a href="https://goo.gl/maps/kMgBM9k615peiY687" target="_blank">Caferağa Mah. Nail Bey Sk. No:7/A KADIKÖY/İSTANBUL</a></p>
+                <p>Instagram: <a href="https://instagram.com/dji.destek" target="_blank">dji.destek</a></p>
             </div>
 
             <div class="right-part col-md-6 col-xs-12">
