--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,51 +14,53 @@
 
 <!-- THREE-CARDS -->
 <section class="three-cards">
-    <div class="part-3">
-        <div class="three-card">
-            <a href="teknik-servis">
-                <div class="texts">
-                    <div class="texts-inside">
-                        <h2>Teknik Servis</h2>
-                        <p>Hemen iletişime geçin, ürününüzü eskisinden daha iyi hale getirelim.</p>
+    <div class="container">
+        <div class="part-3">
+            <div class="three-card">
+                <a href="teknik-servis">
+                    <div class="texts">
+                        <div class="texts-inside">
+                            <h2>Teknik Servis</h2>
+                            <p>Hemen iletişime geçin, ürününüzü eskisinden daha iyi hale getirelim.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="image">
-                    <img src="assets/img/slider/slider3.jpg" alt="yeni-drone-satın-al-2-yil-boyunca-teknik-serviste-yuzde-5-indirim-kap-slider">
-                </div>
-            </a>
+                    <div class="image">
+                        <img src="/assets/img/blog/teknik-servis-islemleri.jpg" alt="yeni-drone-satın-al-2-yil-boyunca-teknik-serviste-yuzde-5-indirim-kap-slider">
+                    </div>
+                </a>
+            </div>
         </div>
-    </div>
-
-    <div class="part-3">
-        <div class="three-card">
-            <a href="magaza">
-                <div class="texts">
-                    <div class="texts-inside">
-                        <h2>Yedek Parça & Aksesuar</h2>
-                        <p>FPV gözlüğü, özel çantalar, yedek batarya ve birçok ürün için mağazamızı ziyaret edin.</p>
+    
+        <div class="part-3">
+            <div class="three-card">
+                <a href="magaza">
+                    <div class="texts">
+                        <div class="texts-inside">
+                            <h2>Yedek Parça & Aksesuar</h2>
+                            <p>FPV gözlüğü, özel çantalar, yedek batarya ve birçok ürün için mağazamızı ziyaret edin.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="image">
-                    <img src="assets/img/slider/slider2.jpg" alt="drone-yedek-parca-ve-aksesuar-slider">
-                </div>
-            </a>
+                    <div class="image">
+                        <img src="/assets/img/blog/drone-yedek-parca-ve-aksesuar.png" alt="drone-yedek-parca-ve-aksesuar-slider">
+                    </div>
+                </a>
+            </div>
         </div>
-    </div>
-
-    <div class="part-3">
-        <div class="three-card">
-            <a href="blog">
-                <div class="texts">
-                    <div class="texts-inside">
-                        <h2>Blog</h2>
-                        <p>Drone nasıl daha iyi kullanılır? Drone'larınızı nasıl tamir ediyoruz? Blog sayfamızda daima güncel içeriklerimizle sizleri bekliyoruz.</p>
+    
+        <div class="part-3">
+            <div class="three-card">
+                <a href="blog">
+                    <div class="texts">
+                        <div class="texts-inside">
+                            <h2>Blog</h2>
+                            <p>Drone nasıl daha iyi kullanılır? Drone'larınızı nasıl tamir ediyoruz? Blog sayfamızda daima güncel içeriklerimizle sizleri bekliyoruz.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="image">
-                    <img src="assets/img/slider/slider1.jpg" alt="drone-tamiri-slider">
-                </div>
-            </a>
+                    <div class="image">
+                        <img src="/assets/img/blog/dronelar-nasil-ucar.jpg" alt="drone-tamiri-slider">
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
 </section>
