--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,9 +96,9 @@ html {}
     width: 170px;
     height: auto;
     transition: 0.3s all;
-    image-rendering: auto;
+    /* image-rendering: auto;
     image-rendering: crisp-edges;
-    image-rendering: pixelated;
+    image-rendering: pixelated; */
 }
 
 .navbar-brand .navbar-logo-white {
@@ -599,9 +599,9 @@ html {}
 }
 
 .footer-top-bottom .footer-logo img{
-    image-rendering: auto;
+    /* image-rendering: auto;
     image-rendering: crisp-edges;
-    image-rendering: pixelated;
+    image-rendering: pixelated; */
 }
 
 .footer-top-bottom-list {
