favorite blogs updated at the bottom

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -230,6 +230,7 @@
                         <ul>
                             <li><a href="/blog/dronelar-nasil-ucar">Drone'lar Nasıl Uçar?</a></li>
                             <li><a href="/blog/drone-nasil-ucurulur">Drone Nasıl Uçurulur?</a></li>
+                            <li><a href="/blog/teknik-servis-islemleri">Teknik Servis İşlemleri</a></li>
                         </ul>
                     </div>
         
