--- a/views/layouts/layout-admin.ejs
+++ b/views/layouts/layout-admin.ejs
@@ -17,7 +17,7 @@
 					<div id="kt_header_mobile" class="header-mobile">
 						
 						<a href="/admin">
-							<img alt="Logo" src="/assets/img/logo/logo-white.svg" class="max-h-30px" />
+							<img alt="Logo" src="/assets/img/logo/djidestek-logo-white.png" class="max-h-30px" />
 						</a>
 						
 						<div class="d-flex align-items-center">
@@ -48,7 +48,7 @@
 							<div class="d-none d-lg-flex align-items-center mr-3">
 								
 								<a href="/admin" class="mr-20">
-									<img alt="Logo" src="/assets/img/logo/logo-white.svg" class="logo-default max-h-35px" />
+									<img alt="Logo" src="/assets/img/logo/djidestek-logo-white.png" class="logo-default max-h-35px" />
 								</a>
 								
 							</div>
