--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -219,18 +219,15 @@
                         <h3>Yedek Parça & Aksesuar</h3>
                         <ul>
                             <li><a href="/magaza">Mağazamız yakında açılacaktır.</a></li>
-                            <!-- <li><a href="">Menzil Arttırıcı Anten</a></li>
-                            <li><a href="">VR Gözlük</a></li>
-                            <li><a href="">Özel Drone Çantası</a></li> -->
                         </ul>
                     </div>
         
                     <div class="footer-top-part ">
                         <h3>Blog</h3>
                         <ul>
-                            <% favoriteBlogs.forEach(blog => { %>
-                            <li><a href="/blog/<%- blog.blogUrl %>"><%- blog.blogTitle %></a></li>
-                            <% }) %>
+                            <% for(let i = 0; i < favoriteBlogs.length; i++) { %>
+                            <li><a href="/blog/<%- favoriteBlogs[i].blogUrl %>"><%- favoriteBlogs[i].blogTitle %></a></li>
+                            <% } %>
                         </ul>
                     </div>
         
