--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -23,8 +23,8 @@
 
             <div class="navbar-brand">
                 <a href="/">
-                    <img class="navbar-logo-white" src="/assets/img/logo/djidestek-logo-white-1.5.png" alt="logo-white">
-                    <img class="navbar-logo-black" src="/assets/img/logo/djidestek-logo-black-1.5.png" alt="logo-black">
+                    <img class="navbar-logo-white" src="/assets/img/logo/djidestek-logo-white-2.png" alt="logo-white">
+                    <img class="navbar-logo-black" src="/assets/img/logo/djidestek-logo-black-2.png" alt="logo-black">
                 </a>
             </div>
 
@@ -243,7 +243,7 @@
         
                 <div class="footer-top-bottom">
                     <div class="footer-logo">
-                        <a href="/"><img src="/assets/img/logo/djidestek-logo-white-1.5.png" alt="logo-white"></a>
+                        <a href="/"><img src="/assets/img/logo/djidestek-logo-white-2.png" alt="logo-white"></a>
                     </div>
         
                     <ul class="footer-top-bottom-list">
