--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -54,10 +54,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
 <!-- WEBSITE ICON -->
-<link rel="icon" href="/assets/img/logo/favicon.svg" sizes="16x16">
+<link rel="icon" href="/assets/img/logo/dji-logo-black.svg" sizes="16x16">
 
 <!-- APPLE TOUCH ICON -->
-<link rel="apple-touch-icon" href="/assets/img/logo/favicon.png">
+<link rel="apple-touch-icon" href="/assets/img/logo/dji-logo-black.svg" sizes="57x57">
 
 <!-- BOOTSTRAP -->
 <link rel="stylesheet" href="/assets/css/bootstrap/bootstrap-4.3.1.min.css">
