favoriteBlogs url problem fixed

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -226,7 +226,7 @@
                         <h3>Blog</h3>
                         <ul>
                             <% for(let i = 0; i < favoriteBlogs.length; i++) { %>
-                            <li><a href="/blog/<%- favoriteBlogs[i].blogUrl %>"><%- favoriteBlogs[i].blogTitle %></a></li>
+                            <li><a href="/blog/<%- favoriteBlogs[i].url %>"><%- favoriteBlogs[i].blogTitle %></a></li>
                             <% } %>
                         </ul>
                     </div>
