--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -19,7 +19,7 @@
             </div>
         </div>
 
-        <div class="container navbar-bottom">
+        <div class="navbar-bottom container">
 
             <div class="navbar-brand">
                 <a href="/">
