--- a/views/partials/foot.ejs
+++ b/views/partials/foot.ejs
@@ -9,8 +9,13 @@
     <!-- SWIPER -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
-    <!-- COOKIES -->
-    <script src="/assets/js/cookies.js"></script>
+    <!-- LIGHTGALLERY -->
+    <script src="/node_modules/lightgallery/lightgallery.min.js"></script>
+    <script src="/node_modules/lightgallery/plugins/zoom/lg-zoom.min.js"></script>
+    <script src="/node_modules/lightgallery/plugins/thumbnail/lg-thumbnail.min.js"></script>
+    <script src="/node_modules/lightgallery/plugins/fullscreen/lg-fullscreen.min.js"></script>
+    <script src="/node_modules/lightgallery/plugins/hash/lg-hash.min.js"></script>
+    <script src="/node_modules/lightgallery/plugins/relativeCaption/lg-relative-caption.min.js"></script>
 
     <!-- SCRIPTS -->
     <script src="/assets/js/scripts.js?v=1.5"></script>
