--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -71,5 +71,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- SWIPER -->
 <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
+<!-- LIGHTGALLERY -->
+<link rel="stylesheet" href="/node_modules/lightgallery/css/lightgallery.css" />
+<link rel="stylesheet" href="/node_modules/lightgallery/css/lg-zoom.css" />
+<link rel="stylesheet" href="/node_modules/lightgallery/css/lg-thumbnail.css" />
+<link rel="stylesheet" href="/node_modules/lightgallery/css/lg-fullscreen.css" />
+<link rel="stylesheet" href="/node_modules/lightgallery/css/lg-transitions.css" />
+
 <!-- WEBSITE STYLE -->
 <link rel="stylesheet" href="/assets/css/style.css?v=2.5.1">
